--- a/src/views/css/style.css
+++ b/src/views/css/style.css
@@ -1,24 +1,16 @@
-/* definir altura da classe principal como 80% da tela */
-.main {
-    height: 80vh;
-    border-bottom: 1px solid lightgrey;
-}
-
 /* colocar input de texto no rodapé */
-.main .stTextInput {
+.stTextInput {
     position: fixed;
     bottom: 2rem;
 }
 
-.main .stTextInput::after {
-    content: "A aplicação pode apresentar informações imprecisas, inclusive sobre pessoas. Por isso, cheque as respostas.";
+.stTextInput::after {
+    content: "A aplicação pode apresentar informações incorretas ou imprecisas. Por isso, cheque sempre as respostas.";
     font-size: small;
+    color: red;
     bottom: 2rem;
 }
 
-.main .stTextInput>label {
-    display: none;
-}
 
 /* ocultar botão do widget de selecionar LLM */
 button[kind="primaryFormSubmit"] {
@@ -51,7 +43,7 @@ span[data-testid="stAlertDynamicIcon"] {
 */
 
 div[data-testid="stFileUploaderDropzoneInstructions"] div::before {
-    content: "Clique aqui ou arraste e solte arquivos nessa área";
+    content: "Clique aqui ou arraste arquivos";
 }
 
 div[data-testid="stFileUploaderDropzoneInstructions"] div span {
@@ -59,7 +51,7 @@ div[data-testid="stFileUploaderDropzoneInstructions"] div span {
 }
 
 div[data-testid="stFileUploaderDropzoneInstructions"] div::after {
-    content: "Limite de 200MB por arquivo";
+    content: "Limite de 200MB por arquivo (PDF, TXT)";
     font-size: small;
     color: gray;
 }
